# xeupiu

./: .gitignore  README.md  app.py  attribute_overlay.py  char_db_script.py  character_creation_handler.py  confession_database.py  confession_handler.py  confession_subtitle_overlay.py  config.json  config.py  config_generic.json  constants.py  database.py  database_boilerplate_generator.py  database_epilogues.csv  database_text.csv  date_weekday_overlay.py  date_ymd_overlay.py  dbmerge.ipynb  development.md  helper_textbox_screenshot.py  image_processing.py  kanji_check.py  kanji_correct.py  logger.py  main.py  main2.py  name_database.py  notebook_database.py  notebook_overlay.py  notebook_translated.csv  ocr.py  overlay.py  overlay_sockets.py  package_executable.bat  package_executable.sh  poorcr.py  pyproject.toml  requirements.txt  (+17 more)
data/: database.csv  database_names.csv  database_notebook.csv  database_text.csv  output.txt
data/texts/: database_confessions.csv  database_epilogues.csv  database_epilogues_v1.csv  database_epilogues_v2.csv  database_names.csv  database_notebook.csv  database_notebook_ES.csv  database_notebook_v1.csv  database_notebook_v2.csv  database_text.csv  database_text_ES.csv  database_text_v1.csv  database_text_v2.csv  notebook_translated.csv  text_translated.csv
scripts/: char_db_script.py  kanji_check.py  kanji_correct.py
src/xeupiu/: app.py  attribute_overlay.py  character_creation_handler.py  confession_database.py  confession_handler.py  confession_subtitle_overlay.py  config.py  database.py  date_weekday_overlay.py  date_ymd_overlay.py  (+16 more)
(+2 files in other folders)
